@@ -110,6 +110,8 @@ Version 5.0.9
   - fixed problem where changing the connection string of a connection to one that changes
     the parameter marker after the connection had been assigned to a command but before
     the connection is opened can cause parameters to not be found (bug #13991) 
+  - Removed the FOUND_ROWS connection option so that the connector returns that actual
+    number of changed rows not the number of matched rows. (bug #32135)
                             
 Version 5.0.8  8/16/2007
   Bug #28706 Log messages are truncated  
